<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginStart="20dp"
        android:src="@drawable/beatles_anthology_box"
        android:layout_below="@+id/fragment"
        android:contentDescription="@string/todo" />
    <Button
        android:id="@+id/openbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/closebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_below="@+id/fragment"/>

    <TextView
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/article1"
        android:layout_toEndOf="@+id/imageView"
        android:layout_below="@+id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:name="com.istiaksaif.fragmentex1.Fragment.SampleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_sample"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>